--- a/index.html
+++ b/index.html
@@ -4,27 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        div{
-            border: 1px solid black;
-        }
-    </style>
 </head>
 <body>
-    <h2 id="ht1" class="c1">JavaScript Practice</h2>
-    <div class="parent">
-        <h3 id="ht2" class="c1">FIRST DOM</h3>
-        <p id="t1" class="c1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, quisquam?
-        </p>
-    </div>
-
-    <!-- <div class="parent">
-        <h3 id="ht2" class="c1">SECOND DOM</h3>
-        <p id="t1" class="c1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, quisquam?
-        </p>
-    </div> -->
-
-    <button>submit</button>
-    <script src="style.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
