--- a/index2.html
+++ b/index2.html
@@ -6,12 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>js classes</h3>
-    <div>
-        <p>first</p>
-        <p>second</p>
-    </div>
-    <button onclick="getinfo(event)">Click me</button>
-    <script src="script.js"></script>
+    <!-- <script src="script2.js"></script> -->
+    <script src="Async.js"></script>
+    <button onclick="printpretty()">static event </button>
+    <button id="btn">click</button>
 </body>
 </html>
