--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <h2>Async</h2>
+    <script src="index2.js"></script>
 </body>
 </html>
