--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="script2.js"></script> -->
-    <script src="Async.js"></script>
-    <button onclick="printpretty()">static event </button>
-    <button id="btn">click</button>
+    <h3>JS PRACTICE</h3>
+    <script src="script2.js"></script>
 </body>
 </html>
